MDEV-9359: encryption.create_or_replace fails sporadically in buildbot: failing assertion: mutex->magic_n == MUTEX_MAGIC_N

Make sure that encryption threads mutex is initialized before starting
encryption threads.