storage/xtradb/fil/fil0crypt.cc
@@ -2294,6 +2294,10 @@ fil_crypt_set_thread_cnt(
 /*=====================*/
 	uint	new_cnt)	/*!< in: New key rotation thread count */
 {
+	if (!fil_crypt_threads_inited) {
+		fil_crypt_threads_init();
+	}
+
 	if (new_cnt > srv_n_fil_crypt_threads) {
 		uint add = new_cnt - srv_n_fil_crypt_threads;
 		srv_n_fil_crypt_threads = new_cnt;
@@ -2358,15 +2362,18 @@ void
 fil_crypt_threads_init()
 /*====================*/
 {
-	fil_crypt_event = os_event_create();
-	fil_crypt_threads_event = os_event_create();
-	mutex_create(fil_crypt_threads_mutex_key,
-		     &fil_crypt_threads_mutex, SYNC_NO_ORDER_CHECK);
+	ut_ad(mutex_own(&fil_system->mutex));
+	if (!fil_crypt_threads_inited) {
+		fil_crypt_event = os_event_create();
+		fil_crypt_threads_event = os_event_create();
+		mutex_create(fil_crypt_threads_mutex_key,
+			&fil_crypt_threads_mutex, SYNC_NO_ORDER_CHECK);
 
-	uint cnt = srv_n_fil_crypt_threads;
-	srv_n_fil_crypt_threads = 0;
-	fil_crypt_set_thread_cnt(cnt);
-	fil_crypt_threads_inited = true;
+		uint cnt = srv_n_fil_crypt_threads;
+		srv_n_fil_crypt_threads = 0;
+		fil_crypt_threads_inited = true;
+		fil_crypt_set_thread_cnt(cnt);
+	}
 }
 
 /*********************************************************************
@@ -2389,6 +2396,7 @@ fil_crypt_threads_cleanup()
 {
 	os_event_free(fil_crypt_event);
 	os_event_free(fil_crypt_threads_event);
+	fil_crypt_threads_inited = false;
 }
 
 /*********************************************************************
